force-app/main/default/objects/Job_Control__c/Job_Control__c.object-meta.xml
<CustomObject>
    <label>Job Control</label>
    <nameField>
        <displayFormat>JC-{0000000}</displayFormat>
        <label>Job Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>