force-app/main/default/objects/Job_Control__c/fields/createdDate__c.field-meta.xml
<CustomField>
    <fullName>createdDate__c</fullName>
    <label>createdDate</label>
    <type>DateTime</type>
</CustomField>