force-app/main/default/objects/Job_Control__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>