force-app/main/default/objects/Job_Control__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>JobType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BigObjectIngest</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>V2Ingest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>