force-app/main/default/objects/Job_Control__c/fields/numberRecordsFailed__c.field-meta.xml
<CustomField>
    <fullName>numberRecordsFailed__c</fullName>
    <label>numberRecordsFailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>