force-app/main/default/objects/Job_Control__c/fields/numberRecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>numberRecordsProcessed__c</fullName>
    <label>numberRecordsProcessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>