force-app/main/default/objects/Job_Control__c/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>