force-app/main/default/objects/Job_Control__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>insert</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>hardDelete</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>