force-app/main/default/objects/Job_Control__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>UploadComplete</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>JobComplete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>