force-app/main/default/objects/Job_Control__c/fields/SystemModStamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModStamp__c</fullName>
    <label>SystemModStamp</label>
    <type>DateTime</type>
</CustomField>